--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,9 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.16", features = ["cargo", "derive"] }
+dirs = "5.0.1"
 regex = "1.10.2"
+
+[[bin]]
+name = "cgit"
+path = "src/main.rs"
