add script init

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ clap = { version = "4.4.16", features = ["cargo", "derive"] }
 dirs = "5.0.1"
 regex = "1.10.2"
 
+[package.metadata.scripts]
+install = "cargo build --package cgit --release && sudo cp "
+
 [[bin]]
 name = "cgit"
 path = "src/main.rs"
